# Python_Data_Science

./: HW2_1.ipynb  Hw_1.ipynb  pyproject.toml
HW2/: HW2_1.ipynb  HW2_2.ipynb  HW_2_3.ipynb  df_filling_avg.csv
HW3/: hw_3.ipynb
HW4/: OverfittingHomeWork.ipynb
HW5/: .~lock.all_idle.csv#  all_idle.csv  all_idle_tfd.csv  all_running.csv  all_running_tfd.csv  all_stairs.csv  all_stairs_tfd.csv  all_walking.csv  all_walking_tfd.csv  hw5.ipynb  time_features.csv
HW_10/: HW_10_first_part.ipynb  HW_10_second_part.ipynb
HW_11/: hw_11.ipynb
HW_12/: hw_12.ipynb
HW_6/: hw_6.ipynb
HW_7/: hw_7.ipynb
HW_8/: HW_8.ipynb  pyproject.toml
HW_9/: hw_9.ipynb
class_work/class_work_1/: test.py
