[tool.poetry]
name = "python-data-science"
version = "0.1.0"
description = ""
authors = ["Noma9d <woody0740@gmail.com>"]
readme = "README.md"
packages = [{include = "python_data_science"}]

[tool.poetry.dependencies]
python = "3.11"
numpy = "^1.26.1"
ipykernel = "^6.26.0"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
pandas = "^2.1.3"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
